# em-05

./: .dockerignore  .env.example  .gitignore  Dockerfile  Readme.md  docker-compose.yml  pyproject.toml
src/: main.py
src/api/: handlers.py  schema.py
src/config/: container.py  settings.py
src/infrastructure/: middleware.py
src/infrastructure/cache/: redis_.py
src/infrastructure/database/: connection.py
src/infrastructure/database/models/: base.py  mapped_values.py  models.py
src/infrastructure/repository/: sqla.py
src/interfaces/cache/: storage.py
src/interfaces/repository/: trading.py
